--- a/Resources/Public/Styles/Main.css
+++ b/Resources/Public/Styles/Main.css
@@ -28,6 +28,7 @@
       display: flex;
       flex-wrap: wrap; }
       .gdpr-cookieconsent-settings__content__cta button, .gdpr-cookieconsent-settings__content__individual-switch button {
+        display: block;
         width: 100%;
         height: 45px; }
         .gdpr-cookieconsent-settings__content__cta button#gdpr-cc-btn-save, .gdpr-cookieconsent-settings__content__individual-switch button#gdpr-cc-btn-save {
