--- a/Resources/Private/Styles/Main.scss
+++ b/Resources/Private/Styles/Main.scss
@@ -1,261 +1,265 @@
 .gdpr-cookieconsent-settings {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    max-height: 80vh;
+    overflow-x: auto;
+    background-color: rgba(255, 255, 255, 0.95);
+    z-index: 9999;
 
+    &__content {
+        $contentWrapper: &;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding-top: 30px;
 
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  max-height: 80vh;
-  overflow-x: auto;
-  background-color: rgba(255,255,255,0.95);
-  z-index: 9999;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
 
-  &__content {
-    $contentWrapper: &;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding-top: 30px;
-
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-    &__info {
-      flex: 0 0 calc(80% - 50px);
-      width: calc(80% - 50px);
-
-      h2 {
-        padding-bottom: 20px;
-      }
-
-      &__settings-description {
-        display: none;
-      }
-    }
-
-    &__cta{
-      flex: 0 0 20%;
-      width: 20%;
-
-      display: flex;
-      flex-wrap: wrap;
-
-      button {
-        width: 100%;
-        height: 45px;
-
-        &#gdpr-cc-btn-save {
-          display: none;
-        }
-      }
-
-      a {
-        font-size: 14px;
-        font-weight: bold;
-        color: #0089cb;
-        width: 100%;
-        text-align: right;
-
-        &:hover {
-          cursor: pointer;
-        }
-
-        &#gdpr-cc-btn-accept-necessary {
-          align-self: flex-end;
-        }
-      }
-    }
-
-    &__individual-switch {
-      @extend #{$contentWrapper}__cta;
-
-      align-self: flex-end;
-      padding-bottom: 20px;
-
-      #gdpr-cc-btn-individual-settings-disable {
-        display: none;
-      }
-    }
-
-    &__settings {
-      display: none;
-      flex: 0 0 100%;
-      width: 100%;
-
-      margin-top: 30px;
-    }
-
-    &__links {
-      margin: 20px 0;
-      flex: 0 0 calc(80% - 50px);
-      width: calc(80% - 50px);
-
-      a,span {
-        color: #aaaaaa;
-        font-weight: 700;
-        font-size: 12px;
-      }
-
-      span {
-        padding: 0 5px;
-      }
-
-    }
-
-
-    @media only screen and (max-width: 1224px) {
-      padding: 30px 24px 0 24px;
-    }
-
-    @media only screen and (max-width: 1224px) {
-      .gdpr-cookieconsent-setting-group {
-        &__cookies {
-          flex: 0 0 100%;
-          width: 100%;
-        }
-      }
-      #{$contentWrapper} {
         &__info {
-          flex: 0 0 100%;
-          width: 100%;
+            flex: 0 0 calc(80% - 50px);
+            width: calc(80% - 50px);
+
+            h2 {
+                padding-bottom: 20px;
+            }
+
+            &__settings-description {
+                display: none;
+            }
         }
 
         &__cta {
-          flex: 0 0 100%;
-          width: 100%;
+            flex: 0 0 20%;
+            width: 20%;
 
-          margin-top: 30px;
+            display: flex;
+            flex-wrap: wrap;
 
-          button {
-            margin-bottom: 30px;
-          }
-          a {
-            text-align: left;
-          }
+            button {
+                width: 100%;
+                height: 45px;
+
+                &#gdpr-cc-btn-save {
+                    display: none;
+                }
+            }
+
+            a {
+                font-size: 14px;
+                font-weight: bold;
+                color: #0089cb;
+                width: 100%;
+                text-align: right;
+
+                &:hover {
+                    cursor: pointer;
+                }
+
+                &#gdpr-cc-btn-accept-necessary {
+                    align-self: flex-end;
+                }
+            }
         }
 
         &__individual-switch {
-          order: 1;
+            @extend #{$contentWrapper}__cta;
+
+            align-self: flex-end;
+            padding-bottom: 20px;
+
+            #gdpr-cc-btn-individual-settings-disable {
+                display: none;
+            }
+        }
+
+        &__settings {
+            display: none;
+            flex: 0 0 100%;
+            width: 100%;
+
+            margin-top: 30px;
         }
 
         &__links {
-          flex: 0 0 100%;
-          width: 100%;
-          order: 2;
+            margin: 20px 0;
+            flex: 0 0 calc(80% - 50px);
+            width: calc(80% - 50px);
+
+            a, span {
+                color: #aaaaaa;
+                font-weight: 700;
+                font-size: 12px;
+            }
+
+            span {
+                padding: 0 5px;
+            }
+
         }
-      }
+
+
+        @media only screen and (max-width: 1224px) {
+            padding: 30px 24px 0 24px;
+        }
+
+        @media only screen and (max-width: 1224px) {
+            .gdpr-cookieconsent-setting-group {
+                &__cookies {
+                    flex: 0 0 100%;
+                    width: 100%;
+                }
+            }
+            #{$contentWrapper} {
+                &__info {
+                    flex: 0 0 100%;
+                    width: 100%;
+                }
+
+                &__cta {
+                    flex: 0 0 100%;
+                    width: 100%;
+
+                    margin-top: 30px;
+
+                    button {
+                        margin-bottom: 30px;
+                    }
+
+                    a {
+                        text-align: left;
+                    }
+                }
+
+                &__individual-switch {
+                    order: 1;
+                }
+
+                &__links {
+                    flex: 0 0 100%;
+                    width: 100%;
+                    order: 2;
+                }
+            }
+        }
     }
-  }
+
+    &__close {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+    }
 }
 
 
 .gdpr-cookieconsent-setting-group {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 
-  background-color: #fff;
-  padding: 24px;
+    background-color: #fff;
+    padding: 24px;
 
-  &__headline {
-    flex: 0 0 90%;
-    width: 90%;
-    font-size: 24px;
-    font-weight: bold;
-    color: #015281;
-  }
-
-  &__switch {
-    flex: 0 0 10%;
-    text-align: right;
-  }
-
-  &__description {
-    flex: 0 0 90%;
-    width: 90%;
-    font-size: 16px;
-  }
-
-  &__cookies {
-    display: none;
-    flex: 0 0 90%;
-    width: 90%;
-
-    margin-top: 20px;
-  }
-
-  & + & {
-    margin-top: 20px;
-  }
-
-  a {
-    font-size: 12px;
-    color: #0072bc;
-    font-weight: bold;
-    align-self: end;
-    line-height: 1;
-    &:hover {
-      cursor: pointer;
+    &__headline {
+        flex: 0 0 90%;
+        width: 90%;
+        font-size: 24px;
+        font-weight: bold;
+        color: #015281;
     }
-  }
 
-  &__details-close {
-    display: none;
-    flex: 0 0 100%;
-    width: 100%;
-    text-align: right;
-  }
+    &__switch {
+        flex: 0 0 10%;
+        text-align: right;
+    }
+
+    &__description {
+        flex: 0 0 90%;
+        width: 90%;
+        font-size: 16px;
+    }
+
+    &__cookies {
+        display: none;
+        flex: 0 0 90%;
+        width: 90%;
+
+        margin-top: 20px;
+    }
+
+    & + & {
+        margin-top: 20px;
+    }
+
+    a {
+        font-size: 12px;
+        color: #0072bc;
+        font-weight: bold;
+        align-self: end;
+        line-height: 1;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    &__details-close {
+        display: none;
+        flex: 0 0 100%;
+        width: 100%;
+        text-align: right;
+    }
 }
 
 .gdpr-cookieconsent-cookie {
 
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 
-  &__headline {
-    flex: 0 0 25%;
-    width: 25%;
+    &__headline {
+        flex: 0 0 25%;
+        width: 25%;
 
-    color: #014876;
-    font-size: 18px;
-    line-height: 1.5;
-    font-weight: bold;
-  }
-
-  &__attributes {
-    flex: 0 0 100%;
-    width: 100%;
-  }
-
-  .gdpr-cookieconsent-switch {
-    width: 36px;
-    height: 20px;
-
-    input {
-      &:checked + .gdpr-cookieconsent-switch__slider:before {
-        -webkit-transform: translateX(15px) !important;
-        -ms-transform: translateX(15px) !important;
-        transform: translateX(15px) !important;
-      }
+        color: #014876;
+        font-size: 18px;
+        line-height: 1.5;
+        font-weight: bold;
     }
 
-    &__slider {
-      &::before {
-        height: 14px !important; //TODO
-        width: 14px !important; //TODO
-        bottom: 3px !important; //TODO
-      }
+    &__attributes {
+        flex: 0 0 100%;
+        width: 100%;
     }
 
+    .gdpr-cookieconsent-switch {
+        width: 36px;
+        height: 20px;
+
+        input {
+            &:checked + .gdpr-cookieconsent-switch__slider:before {
+                -webkit-transform: translateX(15px) !important;
+                -ms-transform: translateX(15px) !important;
+                transform: translateX(15px) !important;
+            }
+        }
+
+        &__slider {
+            &::before {
+                height: 14px !important; //TODO
+                width: 14px !important; //TODO
+                bottom: 3px !important; //TODO
+            }
+        }
 
 
+    }
 
-  }
-
-  & + & {
-    margin-top: 20px;
-  }
+    & + & {
+        margin-top: 20px;
+    }
 }
 
 .gdpr-cookieconsent-cookie-attribute {
@@ -265,87 +269,87 @@
 
 
     &__label {
-      flex: 0 0 25%;
-      width: 25%;
-      font-size: 16px;
-      word-wrap: anywhere;
-      margin-top: 2px;
+        flex: 0 0 25%;
+        width: 25%;
+        font-size: 16px;
+        word-wrap: anywhere;
+        margin-top: 2px;
     }
 
     &__value, &__switch {
-      flex: 0 0 calc(75% - 50px);
-      width: calc(75% - 50px);
-      font-size: 16px;
-      align-self: center;
-      margin-top: 2px;
+        flex: 0 0 calc(75% - 50px);
+        width: calc(75% - 50px);
+        font-size: 16px;
+        align-self: center;
+        margin-top: 2px;
     }
 }
 
 .gdpr-cookieconsent-switch {
-  $switch: &;
-  position: relative;
-  display: inline-block;
-  width: 50px;
-  height: 24px;
+    $switch: &;
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
 
 
-  input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+    input {
+        opacity: 0;
+        width: 0;
+        height: 0;
 
-    &:checked + #{$switch}__slider{
-      background-color: #2196F3;
+        &:checked + #{$switch}__slider {
+            background-color: #2196F3;
+        }
+
+        &:focus + #{$switch}__slider {
+            box-shadow: 0 0 1px #2196F3;
+        }
+
+        &:checked + #{$switch}__slider:before {
+            -webkit-transform: translateX(26px);
+            -ms-transform: translateX(26px);
+            transform: translateX(26px);
+        }
     }
 
-    &:focus + #{$switch}__slider {
-      box-shadow: 0 0 1px #2196F3;
+
+    &__slider {
+        position: absolute !important; //TODO: Remove important
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+        border-radius: 34px;
+
+        &::before {
+            position: absolute !important; //TODO: Remove important
+            content: "";
+            height: 16px !important; //TODO: Remove important;
+            width: 16px !important; //TODO: Remove important;
+            left: 4px !important; //TODO: Remove important;
+            bottom: 4px !important; //TODO: Remove important;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+            border-radius: 50%;
+
+            background-image: none !important; //TODO: Remove important;
+        }
     }
-
-    &:checked + #{$switch}__slider:before {
-      -webkit-transform: translateX(26px);
-      -ms-transform: translateX(26px);
-      transform: translateX(26px);
-    }
-  }
-
-
-  &__slider {
-    position: absolute !important; //TODO: Remove important
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border-radius: 34px;
-
-    &::before {
-      position: absolute !important; //TODO: Remove important
-      content: "";
-      height: 16px !important; //TODO: Remove important;
-      width: 16px !important; //TODO: Remove important;
-      left: 4px !important; //TODO: Remove important;
-      bottom: 4px !important; //TODO: Remove important;
-      background-color: white;
-      -webkit-transition: .4s;
-      transition: .4s;
-      border-radius: 50%;
-
-      background-image: none!important; //TODO: Remove important;
-    }
-  }
 }
 
 
 .gdpr-cookieconsent-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,0.75);
-  z-index: 9000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 9000;
 }
