--- a/Resources/Public/Styles/Main.css
+++ b/Resources/Public/Styles/Main.css
@@ -24,9 +24,7 @@
 .gdpr-cookieconsent-settings__content__info h2 {
     padding-bottom: 20px;
 }
-.gdpr-cookieconsent-settings__content__info__settings-description {
-    display: none;
-}
+
 .gdpr-cookieconsent-settings__content__cta, .gdpr-cookieconsent-settings__content__individual-switch {
     flex: 0 0 20%;
     width: 20%;
@@ -37,9 +35,7 @@
     width: 100%;
     height: 45px;
 }
-.gdpr-cookieconsent-settings__content__cta button#gdpr-cc-btn-save, .gdpr-cookieconsent-settings__content__individual-switch button#gdpr-cc-btn-save {
-    display: none;
-}
+
 .gdpr-cookieconsent-settings__content__cta a, .gdpr-cookieconsent-settings__content__individual-switch a {
     font-size: 14px;
     font-weight: bold;
@@ -57,11 +53,8 @@
     align-self: flex-end;
     padding-bottom: 20px;
 }
-.gdpr-cookieconsent-settings__content__individual-switch #gdpr-cc-btn-individual-settings-disable {
-    display: none;
-}
+
 .gdpr-cookieconsent-settings__content__settings {
-    display: none;
     flex: 0 0 100%;
     width: 100%;
     margin-top: 30px;
@@ -143,7 +136,6 @@
     font-size: 16px;
 }
 .gdpr-cookieconsent-setting-group__cookies {
-    display: none;
     flex: 0 0 90%;
     width: 90%;
     margin-top: 20px;
@@ -162,7 +154,6 @@
     cursor: pointer;
 }
 .gdpr-cookieconsent-setting-group__details-close {
-    display: none;
     flex: 0 0 100%;
     width: 100%;
     text-align: right;
@@ -278,4 +269,8 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.75);
     z-index: 9000;
+}
+
+.gdpr-cookieconsent-settings .hidden {
+    display: none;
 }
