--- a/Resources/Private/Styles/Main.scss
+++ b/Resources/Private/Styles/Main.scss
@@ -79,7 +79,7 @@
                 margin: calc(var(--cookieconsent-spacing) * 2) 0 0;
             }
 
-            button {
+            .grpr-cc-button {
                 all: unset; //reset site stlyes and only use our styles
                 width: 100%;
                 text-align: center;
@@ -94,7 +94,7 @@
                 box-sizing: border-box;
                 padding-inline: calc(var(--cookieconsent-spacing) / 2);
 
-                &.button--secondary {
+                &--secondary {
                     background: var(--cookieconsent-button-secondary-color);
                     color: var(--cookieconsent-button-secondary-text-color);
                     border-style: solid;
@@ -102,7 +102,7 @@
                     border-width: 3px;
                 }
 
-                & + button {
+                & + .grpr-cc-button {
                     margin-top: calc(var(--cookieconsent-spacing) / 2);
                     @media only screen and (max-width: 1224px) {
                         margin-top: var(--cookieconsent-spacing);
