--- a/Resources/Private/Styles/Main.scss
+++ b/Resources/Private/Styles/Main.scss
@@ -113,7 +113,7 @@
                 &:hover {
                     filter: brightness(0.9)
                 }
-                &:focus {
+                &:focus-visible {
                     outline: var(--cookieconsent-focus-outline);
                     outline-offset: var(--cookieconsent-focus-outline-offset);
                 }
@@ -304,7 +304,7 @@
                 cursor: not-allowed;
             }
         }
-        &:focus {
+        &:focus-visible {
             outline: var(--cookieconsent-switch-outline);
             outline-offset: var(--cookieconsent-switch-outline-offset);
         }
